<resources>
    <string name="app_name">Neuroscience App</string>

    <string name="about">About the App</string>
    <string name="what_is">What is efficient coding</string>

    <string name="action_settings">Settings</string>
    <string name="button_text">select photo</string>
    <string name="dialog_title">Add Photo</string>

    <string name="step_1">Please select a picture to start.</string>
    <string name="step_2">Image converted to grayscale.</string>
    <string name="step_3">Patches from receptive field in primary visual cortex.</string>
    <string name="title_activity_image_channel_conversion">Neuroscience App</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="option_examples">See Examples</string>
    <string name="option_gallery">Choose a picture</string>
    <string name="option_choose">Take a Picture</string>

    <string name="option_gallery_sound">Pick a sound</string>
    <string name="option_choose_sound">Record</string>

    <string name="option_sound">Sound</string>
    <string name="option_image">Image</string>

    <string name="action_see_patches">See Patches</string>
    <string name="backdrop_title">Examples</string>
    <!--<string name="backdrop_subtitle">These are the receptive fields from your brain when looking at a natural image. Check the examples to see how the receptive fields from those images would look like.</string>-->
    <string name="backdrop_subtitle">Compare the tilings of receptive field generated from natural and non-natural images below.</string>
    <string name="title_activity_gallery">Examples</string>
    <string name="title_activity_patches">Patches from receptive fields</string>
    <string name="title_activity_example_patches">Patches from receptive fields</string>

    <string name="main_subtitle">See what the receptive fields generated by your brain look like when viewing different images.</string>
    <string name="main_subtitle_sound">See what the receptive fields generated by your brain look like when viewing different sounds.</string>

    <string name="grayscale_picture_title">Grayscale picture</string>
    <string name="grayscale_picture_parag">The image was converted to grayscale for more efficient processing.</string>

    <string name="patches_title">Resultant filters</string>
    <string name="patches_parag">These filters above were generated by the ICA code. They represent receptive field filters our brains would produce if they had evolved to use efficient coding algorithms to process this type of image.</string>

    <string name="title_activity_about">About the App</string>

    <string name="camera_activity">Take a picture</string>
    <string name="camera_display_activity">Confirm picture</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="image_title">Efficient Coding for Images</string>
    <string name="sound_title">Efficient Coding for Sounds</string>

    <string name="slide_1_title">Efficient Coding</string>
    <string name="slide_1_desc">Efficient coding is a term from Neuroscience that refers to the process that the brain does in order to transmit sensory information with the minimum amount of neurons firing as possible.</string>
    <string name="slide_2_title">Natural Images and Sounds</string>
    <string name="slide_2_desc">Our brains have evolved to use efficient coding algorithms specifically to process natural images and sounds, which include animal vocalizations, environmental sounds and human speech.</string>

    <string name="slide_3_title">Receptive Field Filters</string>
    <string name="slide_3_desc">Efficient coding can be experimentally measured and displayed via images and waves called receptive field filters.</string>

    <string name="slide_4_title">The App</string>
    <string name="slide_4_desc">Using this app, you can see the receptive field filters associated to predefined images and sounds that look the same to the ones that can be seen in your brain!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
