<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".activities.ImageMenuActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="2.5"
        android:elevation="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:alpha="0.1"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/sound_filters"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="-130dp"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:alpha="0.8"
            android:textColor="#EA80FC"
            android:textSize="@dimen/backdrop_title"
            android:text="@string/option_sound"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:layout_marginBottom="-80dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="17sp"
            android:textColor="@color/colorTextLight"
            android:text="@string/main_subtitle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/layout_buttons">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:src="@drawable/examples_icon"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_examples" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_gallery"
                android:layout_centerHorizontal="true"
                android:alpha="0.3"
                android:src="@drawable/choose_sound"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_gallery_sound" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:text="@string/option_choose_sound"
                android:id="@+id/bt_choose"
                android:alpha="0.3"
                android:layout_below="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:src="@drawable/play_button"
                android:background="@android:color/transparent"/>


            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_choose_sound" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
