<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".activities.ImageMenuActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_weight="2.5"
        android:elevation="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_vertical"
                android:paddingLeft="30dp"
                android:layout_marginBottom="0dp"
                android:scaleType="centerInside"
                android:alpha="0.8"
                android:src="@drawable/filters_image"
                android:id="@+id/imageView" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_weight="2.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_title"
                android:textSize="@dimen/slide_title"
                android:textStyle="bold"
                android:paddingLeft="30dp"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:paddingRight="30dp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:textStyle="normal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_desc"
                android:text="@string/main_subtitle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/layout_buttons">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:src="@drawable/examples_icon"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_examples" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_gallery"
                android:layout_centerHorizontal="true"
                android:alpha="0.3"
                android:src="@drawable/gallery_icon"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:text="@string/option_choose"
                android:id="@+id/bt_choose"
                android:alpha="0.3"
                android:layout_below="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:src="@drawable/camera_icon"
                android:background="@android:color/transparent"/>


            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_choose" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
