<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="luc.edu.neuroscienceapp.activities.MenuActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="3"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:elevation="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@color/colorAccent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            android:textSize="30sp"
            android:text="NeuroscienceApp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_examples"
            android:scaleType="fitCenter"
            android:src="@drawable/steps"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/layout_buttons">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:src="@drawable/examples_icon"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_examples" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:id="@+id/bt_gallery"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:src="@drawable/gallery_icon"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:text="@string/option_choose"
                android:id="@+id/bt_choose"
                android:alpha="0.8"
                android:layout_below="@+id/bt_examples"
                android:layout_centerHorizontal="true"
                android:src="@drawable/camera_icon"
                android:background="@android:color/transparent"/>


            <TextView
                android:layout_width="70dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/option_choose" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
